add documentation to cart
